# ai-service

./: .gitignore  pyproject.toml
ai-service/: .env.example  pyproject.toml
ai-service-backup/: pyproject.toml
ai-service-backup/app/core/: clients.py  security.py
ai-service-backup/app/schemas/: payloads.py
ai-service-backup/app/services/: background_video_processing.py  transcribe.py  video.py
ai-service-backup/resources/: walkthrough.md
ai-service/app/: main.py
ai-service/app/api/v1/: router.py
ai-service/app/api/v1/routes/: health.py  ingest.py
ai-service/app/core/: config.py  logging.py
ai-service/app/services/: advanced_chunking.py  background_video_processing.py  initiate_transcription.py  query_rag.py  semantic_chunking.py  transcribe.py  vector_db.py  video_insights.py
ai-service/app/transcription/: transcription_pipeline.py  whisper_engine.py
ai-service/app/transcription/audio/: cleaner.py  extractor.py  normalizer.py  vad.py
ai-service/app/transcription/video/: download_video.py
ai-service/app/utils/: writer.py
ai-service/output/: javascript101.json  javascript101.srt  javascript101.txt
app/: main.py
app/api/v1/: api_router.py
app/core/: config.py  exceptions.py
app/services/: background_video_processing.py  query_rag.py  vector_db.py
backend/: package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: app.ts  server.ts
backend/src/controllers/: query.controller.ts  video.controller.ts
backend/src/routes/: query.routes.ts  video.routes.ts
frontend/: pnpm-lock.yaml
resources/: implementation_plan.md
(+8 files in other folders)
