[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "demucs>=4.0.1",
    "diffq>=0.2.4",
    "fastapi>=0.135.3",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "uvicorn>=0.44.0",
]
